# proxy-wasm-cpp-host

./: .bazelrc  .clang-tidy  .gitignore  BUILD  CODEOWNERS  DEVELOPMENT.md  MODULE.bazel  README.md  VERSIONING.md  WORKSPACE  compile_commands.json  context_test.cc  external  variables.bzl  wasm_vm_test.cc
.github/: dependabot.yml
.github/workflows/: cargo.yml  cpp.yml  format.yml  publish-build-tools.yml  scorecard.yml  test.yml
bazel/: BUILD  dependencies.bzl  dependencies_extra.bzl  dependencies_import.bzl  dependencies_python.bzl  extensions.bzl  python.bzl  repositories.bzl  select.bzl  v8.patch  v8_transition.bzl  variables.bzl  wasm.bzl
bazel/cargo/: BUILD.bazel  Cargo.toml  crates.bzl  rustix-no_git_check.patch
bazel/cargo/remote/: BUILD.addr2line-0.13.0.bazel  BUILD.addr2line-0.14.0.bazel  BUILD.addr2line-0.14.1.bazel  BUILD.addr2line-0.15.1.bazel  BUILD.addr2line-0.16.0.bazel  BUILD.addr2line-0.17.0.bazel  BUILD.adler-0.2.3.bazel  BUILD.adler-1.0.2.bazel  BUILD.aho-corasick-0.7.14.bazel  BUILD.aho-corasick-0.7.15.bazel  BUILD.aho-corasick-0.7.18.bazel  BUILD.ansi_term-0.11.0.bazel  BUILD.ansi_term-0.12.1.bazel  BUILD.anyhow-1.0.33.bazel  BUILD.anyhow-1.0.34.bazel  BUILD.anyhow-1.0.35.bazel  BUILD.anyhow-1.0.38.bazel  BUILD.anyhow-1.0.40.bazel  BUILD.anyhow-1.0.44.bazel  BUILD.anyhow-1.0.45.bazel  BUILD.anyhow-1.0.51.bazel  BUILD.anyhow-1.0.52.bazel  BUILD.arrayref-0.3.6.bazel  BUILD.arrayvec-0.5.2.bazel  BUILD.atty-0.2.14.bazel  BUILD.backtrace-0.3.53.bazel  BUILD.backtrace-0.3.54.bazel  BUILD.backtrace-0.3.55.bazel  BUILD.backtrace-0.3.56.bazel  BUILD.backtrace-0.3.59.bazel  BUILD.backtrace-0.3.61.bazel  BUILD.backtrace-0.3.63.bazel  BUILD.base64-0.12.3.bazel  BUILD.bincode-1.3.1.bazel  BUILD.bincode-1.3.2.bazel  BUILD.bincode-1.3.3.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.blake2b_simd-0.5.10.bazel  BUILD.blake2b_simd-0.5.11.bazel  (+425 more)
bazel/cargo/wasmsign/: BUILD.bazel  Cargo.toml  crates.bzl
bazel/cargo/wasmsign/remote/: BUILD.adler2-2.0.1.bazel  BUILD.aho-corasick-1.1.4.bazel  BUILD.ansi_term-0.12.1.bazel  BUILD.anyhow-1.0.100.bazel  BUILD.anyhow-1.0.53.bazel  BUILD.anyhow-1.0.86.bazel  BUILD.atty-0.2.14.bazel  BUILD.autocfg-1.5.0.bazel  BUILD.base64-0.22.1.bazel  BUILD.base64-0.9.3.bazel  BUILD.bazel  BUILD.bitflags-1.3.2.bazel  BUILD.bitflags-2.10.0.bazel  BUILD.bumpalo-3.19.1.bazel  BUILD.byteorder-1.4.3.bazel  BUILD.byteorder-1.5.0.bazel  BUILD.cc-1.2.50.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.clap-2.34.0.bazel  BUILD.clap-3.2.25.bazel  BUILD.clap_lex-0.2.4.bazel  BUILD.crc32fast-1.5.0.bazel  BUILD.ct-codecs-1.1.1.bazel  BUILD.ct-codecs-1.1.6.bazel  BUILD.displaydoc-0.2.5.bazel  BUILD.ed25519-compact-1.0.16.bazel  BUILD.ed25519-compact-1.0.8.bazel  BUILD.ed25519-compact-2.2.0.bazel  BUILD.env_filter-0.1.4.bazel  BUILD.env_logger-0.11.8.bazel  BUILD.errno-0.3.14.bazel  BUILD.find-msvc-tools-0.1.5.bazel  BUILD.flate2-1.1.5.bazel  BUILD.form_urlencoded-1.2.2.bazel  BUILD.getrandom-0.2.15.bazel  BUILD.getrandom-0.2.4.bazel  BUILD.getrandom-0.3.4.bazel  BUILD.hashbrown-0.12.3.bazel  BUILD.hermit-abi-0.1.19.bazel  BUILD.hermit-abi-0.3.9.bazel  (+145 more)
bazel/cargo/wasmtime/: BUILD.bazel  Cargo.toml  README.md  bumpalo.patch  cranelift-isle.patch  crates.bzl  psm.patch  vendor_and_patch.sh  wasmtime-bumpalo.patch  wasmtime-runtime.patch
bazel/cargo/wasmtime/remote/: BUILD.addr2line-0.17.0.bazel  BUILD.addr2line-0.19.0.bazel  BUILD.addr2line-0.21.0.bazel  BUILD.addr2line-0.25.1.bazel  BUILD.addr2line-0.26.0.bazel  BUILD.adler-1.0.2.bazel  BUILD.ahash-0.7.6.bazel  BUILD.ahash-0.8.11.bazel  BUILD.ahash-0.8.3.bazel  BUILD.aho-corasick-0.7.18.bazel  BUILD.aho-corasick-0.7.19.bazel  BUILD.aho-corasick-0.7.20.bazel  BUILD.aho-corasick-1.0.1.bazel  BUILD.aho-corasick-1.0.5.bazel  BUILD.aho-corasick-1.1.1.bazel  BUILD.aho-corasick-1.1.3.bazel  BUILD.allocator-api2-0.2.21.bazel  BUILD.ambient-authority-0.0.2.bazel  BUILD.android_system_properties-0.1.5.bazel  BUILD.anyhow-1.0.100.bazel  BUILD.anyhow-1.0.102.bazel  BUILD.anyhow-1.0.53.bazel  BUILD.anyhow-1.0.56.bazel  BUILD.anyhow-1.0.57.bazel  BUILD.anyhow-1.0.58.bazel  BUILD.anyhow-1.0.65.bazel  BUILD.anyhow-1.0.66.bazel  BUILD.anyhow-1.0.69.bazel  BUILD.anyhow-1.0.70.bazel  BUILD.anyhow-1.0.71.bazel  BUILD.anyhow-1.0.75.bazel  BUILD.anyhow-1.0.81.bazel  BUILD.anyhow-1.0.86.bazel  BUILD.arbitrary-1.3.0.bazel  BUILD.arbitrary-1.3.2.bazel  BUILD.arbitrary-1.4.2.bazel  BUILD.arrayvec-0.7.2.bazel  BUILD.async-trait-0.1.73.bazel  BUILD.async-trait-0.1.89.bazel  BUILD.atty-0.2.14.bazel  (+1304 more)
bazel/patches/: scroll-0.10.2-remove_doc_requirement.diff  wasmtime-0.20.0-fix-include-path.diff
include/proxy-wasm/: bytecode_util.h  compat.h  context.h  context_interface.h  dyn.h  dyn_vm.h  dyn_vm_plugin.h  exports.h  http_interface.h  limits.h  network_interface.h  null_plugin.h  null_vm.h  null_vm_plugin.h  pairs_util.h  proxy_action.h  sdk.h  signature_util.h  v8.h  vm_id_handle.h  wamr.h  wasm.h  wasm_api_impl.h  wasm_vm.h  wasm_vm.h.orig  wasmtime.h  word.h
integration_test/envoy/: BUILD  tmp.cc
src/: base64.cc  base64.h  bytecode_util.cc  context.cc  exports.cc  exports.h  foreign.cc  hash.cc  hash.h  pairs_util.cc  shared_data.cc  shared_data.h  shared_queue.cc  shared_queue.h  shared_storage.cc  shared_storage.h  signature_util.cc  vm_id_handle.cc  wasm.cc  wasm.h  wasm_vm.cc  wasm_vm.h  wasm_vm_base.h
src/common/: bytecode_util.cc  bytecode_util.h  c_smart_ptr.h  types.h  wasm_util.cc  wasm_util.h
src/dyn/: dyn.cc  dyn_ffi.cc  dyn_vm.cc  dyn_vm_plugin.cc
src/null/: null.cc  null_plugin.h  (+4 more)
test/: BUILD  arg_passing_test.cc  bytecode_util_test.cc  context_test.cc  dyn_vm_test.cc  endianness_test.cc  exports_test.cc  leak.cc  logging_test.cc  null_vm_test.cc  pairs_util_fuzzer.cc  runtime_test.cc  security_test.cc  shared_data_test.cc  shared_queue_test.cc  shared_storage_test.cc  signature_util_test.cc  stop_iteration_test.cc  utility.cc  utility.h  v8_options_test.cc  vm_id_handle_test.cc  wasm_test.cc  wasm_vm_test.cc  wasmtime_vm_test.cc  watdata.h
tools/: gen_compdb.py  gen_compilation_database.py
(+38 files in other folders)
