[package]
edition = "2018"
name = "wasmtime-c-api-bazel"
version = "0.25.0"

[lib]
path = "fake_lib.rs"

[dependencies]
env_logger = "0.8"
anyhow = "1.0"
once_cell = "1.3"
wasmtime = {version = "0.25.0", default-features = false}
wasmtime-c-api-macros = {git = "https://github.com/bytecodealliance/wasmtime", tag = "v0.25.0", path = "crates/c-api/macros"}

[package.metadata.raze]
rust_rules_workspace_name = "rules_rust"
gen_workspace_prefix = "proxy_wasm_cpp_host"
genmode = "Remote"
package_aliases_dir = "."
workspace_path = "//bazel/cargo"
