# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_rust//crate_universe:defs.bzl", "crates_vendor")
load("@proxy_wasm_cpp_host//bazel:dependencies.bzl", "SUPPORTED_PLATFORM_TRIPLES")

exports_files(
    [
        "Cargo.toml",
        "Cargo.Bazel.lock",
    ],
)

crates_vendor(
    name = "crates_vendor",
    cargo_lockfile = "//bazel/cargo/wasmsign:Cargo.Bazel.lock",
    manifests = ["//bazel/cargo/wasmsign:Cargo.toml"],
    mode = "remote",
    generate_target_compatible_with = False,
    # supported_platform_triples = SUPPORTED_PLATFORM_TRIPLES,
    tags = ["manual"],
    vendor_path = "//bazel/cargo/wasmsign/remote",
)
