# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
edition = "2021"
name = "wasmtime-c-api-bazel"
version = "40.0.2"

[lib]
path = "fake_lib.rs"

[dependencies]
# Fixes testdata build error due to missing crate_features = ["std"]
log = {version = "0.4.29", default-features = false, features = ['std']}
# IMPORTANT NOTES:
# 1. Prefixed linking requires rust_static_library instead of rust_library
#    (see vendor_and_patch.sh for automatic patching)
#
# Use vendor_and_patch.sh to automatically apply the patch:
# `./bazel/cargo/wasmtime/vendor_and_patch.sh --repin`
#
# Or see vendor_and_patch.sh for manual patching commands.
wasmtime-c-api-impl = {version = "40.0.2", default-features = false, features = ['cranelift', 'wasi', 'wat', 'gc-drc']}
